# dfngen-rs

./: Cargo.toml  README.md  flake.nix
src/: cg.rs  cluster_groups.rs  computational_geometry.rs  distributions.rs  domain.rs  error.rs  exp_dist.rs  fracture_estimating.rs  generating_points.rs  insert_shape.rs  insert_user_ell.rs  insert_user_ell_by_coord.rs  insert_user_polygon_by_coord.rs  insert_user_rects.rs  insert_user_rects_by_coord.rs  main.rs  math_functions.rs  output.rs  polygon_boundary.rs  read_input.rs  read_input_functions.rs  remove_fractures.rs  structures.rs  vector_functions.rs
src/computational_geometry/: domain_truncation.rs  mod.rs  polygon_boundary.rs  remove_fractures.rs
src/distribution/: exp.rs  exp_dist.rs  fisher.rs  generating_points.rs  log_norm.rs  mod.rs  power_law.rs  trunc_log_norm.rs  trunc_power_law.rs
src/fracture/: cluster_groups.rs  domain.rs  fracture_def.rs  fracture_estimating.rs  fracture_family.rs  insert_shape.rs  insert_user_ell.rs  insert_user_ell_by_coord.rs  insert_user_polygon_by_coord.rs  insert_user_rects.rs  insert_user_rects_by_coord.rs  mod.rs  remove_fractures.rs  user_defined_fractures.rs
src/fracture/fracture_def/: ell.rs  ell_by_coord.rs  mod.rs  polygon_by_coord.rs  rect.rs  rect_by_coord.rs
src/fracture/poly/: domain_truncation.rs  mod.rs
src/io/: input.rs  mod.rs  output.rs  read_input_functions.rs
