[package]
name = "dfngen-rs"
version = "0.1.0"
description = "dfngen: Discrete Fracture Networks (DFN) generator"
edition = "2021"
license = "LGPL-3.0"

[[bin]]
name = "dfngen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
paste = "1.0.14"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_mt = "4.2.2"
text_io = "0.1.12"
