[package]
name = "dfngen-rs"
version = "0.1.0"
description = "dfngen: Discrete Fracture Networks (DFN) generator"
edition = "2021"
license = "LGPL-3.0"

[[bin]]
name = "dfngen"
path = "src/main.rs"

[features]
disable_shortening_int = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
parry3d-f64 = "0.18"
paste = "1.0"
rand = "0.9"
rand_distr = "0.5"
rand_mt = "5.0"
text_io = "0.1"
